remove: Location REST-API Point (makes no sense to only add a new location) refactor: clone DTO has nepenthesName attribute now add: new endpoint to create a new Nepenthes and an additional clone
